# cpp-tutor

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: deploy.yml  publish.yml
backend/: pyproject.toml
backend/app/: api.py  local_tracer.py  trace_cache.py  trace_model.py  tracer_service.py
backend/tests/: test_api.py  test_api_static.py  test_local_tracer.py  test_trace_cache.py  test_trace_model.py  test_tracer_service.py
backend/tests/fixtures/: pointers.cpp
deploy/: Caddyfile  cpp-tutor-backend.service  deploy.sh
frontend/: .env.production  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  CodePanel.tsx  Divider.tsx  Editor.tsx  divider.ts  index.css
frontend/tests/: App.test.tsx  CallTreePanel.test.tsx  CodePanel.test.tsx  Connectors.test.tsx  Divider.test.tsx  DpTablePanel.test.tsx  HelpOverlay.test.tsx  MemoryView.dp.test.tsx  MemoryView.test.tsx  ShapePanel.test.tsx  StackView.test.tsx  Vcr.test.tsx  breakpoints.test.ts  callTree.fixtures.test.ts  callTree.test.ts  client.test.ts  connectorGeometry.test.ts  divider.test.ts  dp.fixtures.test.ts  dpDetect.test.ts  dpExprEval.test.ts  dpModel.test.ts  dpReadSet.test.ts  favicon.test.ts  frameInspector.test.ts  keymap.test.ts  memoryDiff.test.ts  memoryModel.test.ts  shapeHelpers.ts  shapeLayout.test.ts  shapes.fixtures.test.ts  shapes.test.ts  treeCamera.test.ts  treeLayout.test.ts  useElapsed.test.ts  (+2 more)
scripts/: smoke-container.sh
tracer/: Dockerfile  cpp-stl-dwarf-inheritance.patch  cpp-stl-node-payload.patch  sample.cpp
(+103 files in other folders)
