[project]
name = "cpp-tutor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "docker: tests that require the cpp-tutor-tracer Docker image (deselect with -m 'not docker')",
]
